fixed unaligned messages and reduced times to the 3 first letters

--- a/src/EmailRow.css
+++ b/src/EmailRow.css
@@ -43,7 +43,7 @@
   padding-right: 15px;
   font-size: 9px;
   font-weight: bold;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
 }
 
 .emailRow__description {
