--- a/src/Mail.css
+++ b/src/Mail.css
@@ -55,5 +55,5 @@
   right: 0;
   font-size: 12px;
   color: grey;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
 }
